<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Odyssey</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_clearplaylist">Clear playlist</string>
    <string name="action_saveplaylist">Save playlist</string>
    <string name="action_jumpcurrent">Jump to current song</string>
    <string name="action_addalbum">Add album to playlist</string>
    <string name="action_playalbum">Play album</string>
    <string name="action_playall">Play all tracks</string>
    <string name="action_shuffleplaylist">Shuffle playlist</string>
    
    <string name="album_context_menu_action_enqueue">add to playlist</string>
    <string name="album_context_menu_action_play">play album</string>
    <string name="album_context_menu_action_artist">show artist</string>
    
    <string name="album_tracks_context_menu_action_enqueue">add to playlist</string>
    <string name="album_tracks_context_menu_action_enqueueasnext">play after current song</string>
    <string name="album_tracks_context_menu_action_play">play album</string>
    <string name="album_tracks_context_menu_action_artist">show artist</string> 
    
    <string name="all_tracks_context_menu_action_enqueue">add to playlist</string>
    <string name="all_tracks_context_menu_action_enqueueasnext">play after current song</string>
    <string name="all_tracks_context_menu_action_play">play song</string>     
       
    <string name="artist_context_menu_action_enqueue">add to playlist</string>
    <string name="artist_context_menu_action_play">play albums</string>
    
     <string name="playlist_context_menu_action_remove">remove track</string>
     <string name="playlist_context_menu_action_playnext">play as next song</string>
     
     <string name="saved_playlist_context_menu_action_play">play playlist</string>
     <string name="saved_playlist_context_menu_action_delete">delete playlist</string>
     
     <string name="nowplaying_context_menu_equalizer">Equalizer</string>
    
    <string name="dummy_section_text">Dummy_Section</string>
    <string name="section_title_albums">Albums</string>
    <string name="section_title_artists">Artists</string>
    <string name="section_title_alltracks">Tracks</string>
    <string name="section_title_allplaylists">Playlists</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="dialog_playlist_name">set playlist name</string>
    <string name="accept">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="settings_fragment_title">Settings</string>
    <string name="about_fragment_title">About</string>
    <string name="nowplaying_fragment_title">Nowplaying</string>
    <string name="playlist_fragment_title">Playlist</string>
    
    <string name="authors_title">Authors: </string>
    <string name="authors">Hendrik Borghorst \nFrederik Lütkes</string>
    <string name="source_title">Sourcecode: </string>
    
    <string name="easterEgg1">Yeah. Sir, we can´t call it the Enterprise. \nWhy not?</string>
    <string name="easterEgg2">Weapons to maximum. \nSir? \nIt´s a joke Marks.</string>

    <string-array name="navibar_array">
        <item>My Music</item>
        <item>Current Playlist</item>
        <item>Now Playing</item>
        <item>Playlists</item> 
    </string-array>

</resources>
