<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
        <item
        android:id="@+id/action_clearplaylist"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_clearplaylist"/>
        
        <item
        android:id="@+id/action_saveplaylist"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_saveplaylist"/>         
        
        <item
        android:id="@+id/action_jumpcurrent"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_jumpcurrent"/>
        
        <item
        android:id="@+id/action_shuffleplaylist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_shuffleplaylist"/>        
    
</menu>
