<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/savedplaylist_context_menu_action_enqueue"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/album_tracks_context_menu_action_enqueue"/>
    
    <item
        android:id="@+id/savedplaylist_context_menu_action_enqueueasnext"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/album_tracks_context_menu_action_enqueueasnext"/>    
    
    <item
        android:id="@+id/savedplaylist_context_menu_action_remove"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/playlist_context_menu_action_remove"/>     		

</menu>
